--- a/datosgeograficos.html
+++ b/datosgeograficos.html
@@ -61,7 +61,8 @@
             </nav>
         </div>
 
-        <div id="datos geograficos" class="container tab-pane fade"><br>
+        <div id="datos geograficos" class="container tab-pane fade">
+
         </div>
         <div id="traduccion" class="container tab-pane fade"><br>
         </div>
