--- a/oscar.html
+++ b/oscar.html
@@ -48,8 +48,12 @@
                     <li class="nav-item">
                         <a class="nav-link active" data-bs-toggle="tab" href="#datosgenerales">Datos Generales</a>
                     </li>
-                    <li class="nav-item" class="dropdown-menu">
-                        <a class="nav-link" class="dropdown-item" data-bs-toggle="tab" href="#datosgeograficos">Datos Geográficos</a>
+                    <li class="nav-item dropdown-toggle">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#datosgeograficos">Datos
+                            Geográficos</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="fronteras.html">Fronteras</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="tab" href="#traduccion">Traducción</a>
