--- a/Denis.html
+++ b/Denis.html
@@ -26,7 +26,7 @@
     <button type="button" class="btn btn-primary">Traducciones</button>
     <button type="button" class="btn btn-primary">Banderas</button>
   </nav>
-  <div class="container">
+  <div class="tab-content">
     <form action="" method="post">
       <div class="row">
         <div class="col">
@@ -37,15 +37,16 @@
             <option value="Asia">Asia</option>
             <option value="Europa">Europa</option>
             <option value="Oceania">Oceania</option>
+          </select>
         </div>
         <div class="col">
-          </select>
-          <div class="col"></div>
-          País:<select name="pais" class="form-select w-25">
-            <option value="0">Elige un país</option>
-          </select>
-        </div>
+        País:<select name="pais" class="form-select w-25">
+          <option value="0">Elige un país</option>
+        </select>
+      </div>
+      </div>
     </form>
+  </div>
 </body>
 
 </html>
