--- a/datosgeograficos.html
+++ b/datosgeograficos.html
@@ -14,14 +14,14 @@
 <body>
     <header class="container mt-3">
         <div class="row">
-            <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"></div>
+            <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="175px" height="150px" class="rounded-circle"></div>
             <div class="col-sm-10">
                 <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
             </div>
         </div>
     </header>
-    <div class="tab-content">
-        <div id="datos generales" class="container tab-pane active"><br>
+    <div>
+        <div>
             <form action="" method="post">
                 <div class="row">
                     <div class="col">
