--- a/Denis.html
+++ b/Denis.html
@@ -14,7 +14,8 @@
 <body>
   <header class="container mt-3">
     <div class="row">
-      <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"></div>
+      <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
+          class="rounded-circle"></div>
       <div class="col-sm-10">
         <h1 class="text-center text-white bg-secondary p-5">PAISES DEL MUNDO</h1>
       </div>
@@ -26,27 +27,26 @@
     <button type="button" class="btn btn-primary">Traducciones</button>
     <button type="button" class="btn btn-primary">Banderas</button>
   </nav>
-  <div class="tab-content">
-    <form action="" method="post">
-      <div class="row">
-        <div class="col">
-          Continente:<select name="continente" class="form-select w-25">
-            <option value="0">Elige un continente</option>
-            <option value="Africa">África</option>
-            <option value="Americas">América</option>
-            <option value="Asia">Asia</option>
-            <option value="Europa">Europa</option>
-            <option value="Oceania">Oceania</option>
-          </select>
-        </div>
-        <div class="col">
-        País:<select name="pais" class="form-select w-25">
+  <div>
+    <div class="row">
+      <div class="col">
+        Continente:<select name="continente" class="form-select form-select-sm">
+          <option value="0">Elige un continente</option>
+          <option value="Africa">África</option>
+          <option value="Americas">América</option>
+          <option value="Asia">Asia</option>
+          <option value="Europe">Europa</option>
+          <option value="Oceania">Oceania</option>
+        </select>
+      </div>
+      <div class="col">
+        País:<select name="pais" class="form-select form-select-sm">
           <option value="0">Elige un país</option>
         </select>
       </div>
-      </div>
-    </form>
+    </div>
   </div>
+  
 </body>
 
 </html>
