--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </div>
                             <div style="float: left;">
                                 <select class="form-select" name="continente" id="continente">
-                                    <option value="0" selected>Selecciona el continente</option>
+                                    <option value="0" selected>Selecciona el continentes</option>
                                     <option value="" id="">Asia</option>
                                     <option value="" id="">America</option>
                                     <option value="" id="">Europa</option>
