Parte general Daniel

--- a/indexdani.html
+++ b/indexdani.html
@@ -14,7 +14,12 @@
 
 <body>
   <header>
-    <div class="container-fluid p-5 bg-success text-white text-center">
+    <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
+      align="left" width="227" height="152">
+      <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
+      align="right" width="227" height="152">
+    <div class="container-fluid p-5 bg-success text-white text-center ">
+
       <h1>PAISES DEL MUNDO</h1>
     </div>
   </header>
@@ -36,49 +41,72 @@
     </ul>
   </div>
   <br><br>
-  <div class="divider"></div>
-  <div class="container mt-3">
-    <h2>Seleccione continente</h2>
-    <form action="/action_page.php">
-      <label for="sel1" class="form-label"></label>
-      <select class="form-select bg-success" id="sel1" name="sellist1">
-        <option>Europa</option>
-        <option>America</option>
-        <option>Asia</option>
-        <option>Africa</option>
-        <option>Oceania</option>
-      </select>
+  <table align="center">
 
-  </div>
+    <tr>
+      <td>
+        <div class="container mt-3">
+          <h2>Seleccione continenteㅤㅤㅤㅤㅤㅤ</h2>
+          <form action="/action_page.php">
+            <label for="sel1" class="form-label"></label>
+            <select class="form-select bg-success" id="sel1" name="sellist1">
+              <option>Europa</option>
+              <option>America</option>
+              <option>Asia</option>
+              <option>Africa</option>
+              <option>Oceania</option>
+            </select>
+        </div>
+
+      </td>
+      <td colspan="2">
+        <div class="container mt-3">
+          <h2>Seleccione paísㅤㅤㅤㅤㅤㅤㅤㅤㅤㅤ</h2>
+          <form action="/action_page.php">
+            <label for="sel1" class="form-label"></label>
+            <select class="form-select bg-success" id="sel1" name="sellist1">
+              <option>XXXXXXXXXX</option>
+            </select>
+        </div>
+      </td>
+  </table>
   <br><br>
-  <input type="text" name="Capital" placeholder="Escriba su capital">
-      <br><br>
 
-      <input type="text" name="Población" placeholder="Ponga su poblacion">
-          <br><br>
+  <table align="center">
 
-          <input type="text" name="área" placeholder="Ponga su área">
-          <br><br>
-              <div class="container mt-3">
-                <h2>Seleccione país</h2>
-                <form action="/action_page.php">
-                  <label for="sel1" class="form-label"></label>
-                  <select class="form-select bg-success" id="sel1" name="sellist1">
-                    <option>XXXXXXXXXX</option>
-                  </select>
-                  <br><br>
-                  <input type="text" name="Moneda" placeholder="Ponga su moneda">
-                  
-                      <br><br>
-
-                      <div class="container mt-3">
-                        <h2>Seleccione simbolo</h2>
-                        <form action="/action_page.php">
-                          <label for="sel1" class="form-label"></label>
-                          <select class="form-select bg-success" id="sel1" name="sellist1">
-                            <option>XXXXXXXXXX</option>
-                          </select>
+    <tr>
+      <td>
+        <p align="center" style="background-color:#99FF89">Capital: xxxxxxx</p>
+      </td>
 
 
+    </tr>
+
+    <tr>
+      <td>
+        <p align="center" style="background-color:#99FF89">Población: 9999999999</p>
+      </td>
+
+    <tr>
+
+      <td>
+        <p align="center" style="background-color:#99FF89">Población: 99999999999</p>
+      </td>
+
+    </tr>
+    <tr>
+      <td>
+        <p align="center" style="background-color:#99FF89">Moneda: euro</p>
+      </td>
+
+    </tr>
+    <tr>
+      <td>
+        <p align="center" style="background-color:#99FF89">Símbolo: €</p>
+      </td>
+
+    </tr>
+  </table>
 </body>
+
 </html>
