--- a/index.html
+++ b/index.html
@@ -41,44 +41,42 @@
                     </div>
                 </div>
             </div>
-            <nav class="container navbar-light bg-transparent">
+            <nav class="navbar navbar-light bg-transparent p-2">
                 <div class="row">
-                    <div class="col-auto me-auto">
-                        <div class="justify-content-center">
-                            <h2>
-                                <span class="badge bg-success">
-                                    <button type="button" class="btn btn-success disabled">
-                                        Continente: <button type="button" class="btn btn-success p-0">
-                                            <select name="continente" class="opcionescontinentescasilla p-0">
-                                                <option class="opcionescontinentes" value="null">Selecciona
-                                                    Continente</option>
-                                                <option class="opcionescontinentes" value="asia">Asia</option>
-                                                <option class="opcionescontinentes" value="africa">Africa
-                                                </option>
-                                                <option class="opcionescontinentes" value="americas">América
-                                                </option>
-                                                <option class="opcionescontinentes" value="oceania">Oceanía
-                                                </option>
-                                                <option class="opcionescontinentes" value="europe">Europa
-                                                </option>
-                                            </select>
-                                        </button>
+                    <div class="col">
+                        <h2>
+                            <span class="badge bg-success">
+                                <button type="button" class="btn btn-success disabled">
+                                    Continente: <button type="button" class="btn btn-success p-0">
+                                        <select name="continente" class="opcionescontinentescasilla p-0">
+                                            <option class="opcionescontinentes" value="null">Selecciona
+                                                Continente</option>
+                                            <option class="opcionescontinentes" value="asia">Asia</option>
+                                            <option class="opcionescontinentes" value="africa">Africa
+                                            </option>
+                                            <option class="opcionescontinentes" value="americas">América
+                                            </option>
+                                            <option class="opcionescontinentes" value="oceania">Oceanía
+                                            </option>
+                                            <option class="opcionescontinentes" value="europe">Europa
+                                            </option>
+                                        </select>
                                     </button>
-                                    <button type="button" class="btn btn-success disabled">
-                                        País: <button type="button" class="btn btn-success p-0">
-                                            <select name="pais" class="opcionescontinentescasilla p-0">
-                                                <option class="opcionespaises" value="null">Selecciona País</option>
-                                                <option class="opcionespaises" value="espana">España</option>
-                                                <option class="opcionespaises" value="francia">Francia</option>
-                                                <option class="opcionespaises" value="xxxx">xxxx</option>
-                                            </select>
-                                        </button>
+                                </button>
+                                <button type="button" class="btn btn-success disabled">
+                                    País: <button type="button" class="btn btn-success p-0">
+                                        <select name="pais" class="opcionescontinentescasilla p-0">
+                                            <option class="opcionespaises" value="null">Selecciona País</option>
+                                            <option class="opcionespaises" value="espana">España</option>
+                                            <option class="opcionespaises" value="francia">Francia</option>
+                                            <option class="opcionespaises" value="xxxx">xxxx</option>
+                                        </select>
                                     </button>
-                                </span>
-                            </h2>
-                        </div>
+                                </button>
+                            </span>
+                        </h2>
                     </div>
-                    <div class="col-auto">
+                    <!-- <div class="col-auto">
                         <span class="badge bg-success p-1">
                             <div class="btn-group-lg">
                                 <button type="button" class="btn btn-success"><a class="text-decoration-none text-white"
@@ -91,81 +89,60 @@
                                         href="banderas.html">Bandera</a></button>
                             </div>
                         </span>
-                    </div>
+                    </div> -->
                 </div>
             </nav>
+        </header>
     </div>
-    </header>
+
     </div>
     <!-- FIN DE LA CEBECERA!!!!!!!!!!!!!! -->
-
-    <div class="row p-4">
-        <div class="col">
-            <div class="alert alert-success">
-                <strong>Success!</strong> Indicates a successful or positive action.
+    <div class="container">
+        <div class="d-flex align-items-start p-2">
+            <div class="nav flex-column nav-tabs me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <button class="nav-link rounded active" id="v-pills-datos-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-datos" type="button" role="tab" aria-controls="v-pills-datos"
+                    aria-selected="true">Datos</button>
+                <button class="nav-link rounded" id="v-pills-geografia-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-geografia" type="button" role="tab" aria-controls="v-pills-geografia"
+                    aria-selected="false">Geografía</button>
+                <button class="nav-link rounded" id="v-pills-idioma-tab" data-bs-toggle="pill" data-bs-target="#v-pills-idioma"
+                    type="button" role="tab" aria-controls="v-pills-idioma" aria-selected="false">Idioma</button>
+                <button class="nav-link rounded" id="v-pills-bandera-tab" data-bs-toggle="pill"
+                    data-bs-target="#v-pills-bandera" type="button" role="tab" aria-controls="v-pills-bandera"
+                    aria-selected="false">Bandera</button>
             </div>
-
-
-        </div>
-
-        <div class="col">
-            <div id="accordion">
-                <div class="card">
-                    <div class="card-header">
-                        <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
-                            corrupti ad, quisquam est atque quibusdam modi.
-                            Quaerat!
-                        </a>
-                    </div>
-                    <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
-                        <div class="card-body">
-                            Lorem ipsum..
-                        </div>
-                    </div>
+            <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="v-pills-datos" role="tabpanel"
+                    aria-labelledby="v-pills-datos-tab">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero officiis praesentium ab hic!
+                    Incidunt, modi doloremque libero quam voluptatem fuga quia at, ducimus dicta suscipit error
+                    repudiandae. Eveniet tempore amet, ullam asperiores quidem rerum quam reprehenderit ipsa voluptates
+                    ut veniam sapiente molestias necessitatibus, non, tempora harum hic perspiciatis corporis iure
+                    magni. Esse magnam earum dicta recusandae molestiae porro quia atque labore quisquam libero, maiores
+                    odio ad nemo reiciendis harum, placeat quo, repellat assumenda dolores officiis similique
+                    consectetur veniam sit vero? Distinctio, cupiditate atque tenetur error molestiae reprehenderit
+                    voluptatibus quis expedita illum, possimus voluptatem. Exercitationem temporibus qui accusantium
+                    atque iusto dicta!</div>
+                <div class="tab-pane fade" id="v-pills-geografia" role="tabpanel"
+                    aria-labelledby="v-pills-geografia-tab">
+                    ...kkkkk
                 </div>
-
-                <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
-                            Collapsible Group Item #2
-                        </a>
-                    </div>
-                    <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
-                        <div class="card-body">
-                            Lorem ipsum..
-                        </div>
-                    </div>
+                <div class="tab-pane fade" id="v-pills-idioma" role="tabpanel" aria-labelledby="v-pills-idioma-tab">
+                    ...hhhhh
                 </div>
-
-                <div class="card">
-                    <div class="card-header">
-                        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
-                            Collapsible Group Item #3
-                        </a>
-                    </div>
-                    <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
-                        <div class="card-body">
-                            Lorem ipsum..
-                        </div>
-                    </div>
+                <div class="tab-pane fade" id="v-pills-bandera" role="tabpanel" aria-labelledby="v-pills-bandera-tab">
+                    ...rrrrrr
                 </div>
-
-            </div>
-
-
-        </div>
-
-        <div class="col">
-            <div class="alert alert-success">
-                <strong>Success!</strong> Indicates a successful or positive action.
             </div>
         </div>
+    </div>
     </div>
 
     <!-- INICIO DEL FOOTER!!!!!!!!!!!!!! -->
     <footer
         class="container-fluid bg-secondary bg-gradient text-center text-white text-lg-start position-fixed bottom-0">
-        <div class="text-center p-3">
+        <div class="text-center small p-0">
             © 2022 Copyleft: <svg height="24" viewBox="0 0 16 16" version="1.1" width="24" data-view-component="true">
                 <path fill-rule="evenodd"
                     d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
