--- a/eduardo.html
+++ b/eduardo.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <DIV class="container">
+    <div class="container">
         <header class=" mt-3">
             <div class="row">
                 <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
@@ -55,12 +55,12 @@
                 </div>
             </form>
 
-        </DIV>
+        </div>
         <div class="container mt-3">
 
-            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">idioma1
+            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo0">idioma1
             </button>
-            <div id="demo" class="collapse">
+            <div id="demo0" class="collapse">
                 ESTOS SON LOS IDIOMAS
             </div>
 
@@ -71,10 +71,31 @@
             </button>
             <div id="demo1" class="collapse">
                 ESTOS SON LOS IDIOMAS
+           </div>
+             <div class="container mt-3">
+        
+              <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo2">idioma3
+             </button>
+             <div id="demo2" class="collapse">
+                    ESTOS SON LOS IDIOMAS
             </div>
 
+        <div class="container mt-3">
+          <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo3">idioma4
+            </button>
+            <div id="demo3" class="collapse">
+                ESTOS SON LOS IDIOMAS
+            </div>
         </div>
-    </DIV>
+        <div class="container mt-3">
+   
+         <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo4">idioma5
+        </button>
+        <div id="demo4" class="collapse">
+               ESTOS SON LOS IDIOMAS
+       </div>
+        </div>
+   </div>
 </body>
 
 </html>
