--- a/oscar.html
+++ b/oscar.html
@@ -12,65 +12,121 @@
 </head>
 
 <body>
-    <header class="container mt-3">
-        <div class="row">
-            <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"></div>
-            <div class="col-sm-10">
-                <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
-            </div>
-        </div>
-    </header>
-    <div class="tab-content">
-        <div id="datos generales" class="container tab-pane active"><br>
-            <form action="" method="post">
-                <div class="row">
-                    <div class="col">
-                        Continente:<select name="continente" class="form-select form-select-sm">
-                            <option value="0">Elige un continente</option>
-                            <option value="africa">Africa</option>
-                            <option value="americas">America</option>
-                            <option value="asia">Asia</option>
-                            <option value="europa">Europa</option>
-                            <option value="oceania">Oceania</option>
-                        </select>
-                    </div>
-                    <div class="col">
-                        País:<select name="pais" class="form-select">
-                            <option value="0">Elige un país</option>
-                        </select>
-                    </div>
+    <div class="container">
+        <header class="mt-3">
+            <div class="row">
+                <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
+                        class="rounded-circle"></div>
+                <div class="col-sm-10">
+                    <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
                 </div>
-            </form>
-        </div>
+            </div>
+        </header>
         <div>
-            <nav class="container mt-3  text-center">
-                <ul class="nav nav-tabs" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-bs-toggle="tab" href="#datosgenerales">Datos Generales</a>
-                    </li>
-                    <li class="nav-item dropdown-toggle">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#datosgeograficos">Datos
-                            Geográficos</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="fronteras.html">Fronteras</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#traduccion">Traducción</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#banderas">Banderas</a>
-                    </li>
-                </ul>
+            <nav class="text-center">
+                <button type="button" class="btn btn-primary">Datos Generales</button>
+                <button type="button" class="btn btn-primary">Datos Geográficos</button>
+                <button type="button" class="btn btn-primary">Traducciones</button>
+                <button type="button" class="btn btn-primary">Banderas</button>
             </nav>
         </div>
+        <div class="tab-content">
+            <div id="datos generales" class="container tab-pane active"><br>
+                <form action="" method="post">
+                    <div class="row">
+                        <div class="col">
+                            Continente:<select name="continente" class="form-select form-select-sm">
+                                <option value="0">Elige un continente</option>
+                                <option value="africa">Africa</option>
+                                <option value="americas">America</option>
+                                <option value="asia">Asia</option>
+                                <option value="europa">Europa</option>
+                                <option value="oceania">Oceania</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            País:<select name="pais" class="form-select form-select-sm">
+                                <option value="0">Elige un país</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div id="datos geograficos" class="container tab-pane fade">
 
-        <div id="datos geograficos" class="container tab-pane fade">
-
-        </div>
-        <div id="traduccion" class="container tab-pane fade"><br>
-        </div>
-        <div id="banderas" class="container tab-pane fade"><br>
+            </div>
+            <div id="traduccion" class="container tab-pane fade"><br>
+            </div>
+            <div id="banderas" class="container tab-pane fade"><br>
+            </div>
+        </div><br>
+        <div id="accordion">
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseOne">Frontera 1</a>
+                </div>
+                <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseTwo">Frontera 2</a>
+                </div>
+                <div id="collapseTwo" class="collapse show" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseThree">Frontera 3</a>
+                </div>
+                <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                        ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFour">Frontera 4</a>
+                </div>
+                <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFive">Frontera
+                        5</a>
+                </div>
+                <div id="collapseFive" class="collapse show" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
