--- a/Denis.html
+++ b/Denis.html
@@ -12,41 +12,77 @@
 </head>
 
 <body>
-  <header class="container mt-3">
-    <div class="row">
-      <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
-          class="rounded-circle"></div>
-      <div class="col-sm-10">
-        <h1 class="text-center text-white bg-secondary p-5">PAISES DEL MUNDO</h1>
+  <div class="container">
+    <header>
+      <div class="row">
+        <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
+            class="rounded-circle"></div>
+        <div class="col-sm-10">
+          <h1 class="text-center text-white bg-secondary p-5">PAISES DEL MUNDO</h1>
+        </div>
       </div>
-    </div>
-  </header>
-  <nav class="text-center">
-    <button type="button" class="btn btn-primary">Datos Generales</button>
-    <button type="button" class="btn btn-primary">Datos Geográficos</button>
-    <button type="button" class="btn btn-primary">Traducciones</button>
-    <button type="button" class="btn btn-primary">Banderas</button>
-  </nav>
-  <div>
-    <div class="row">
-      <div class="col">
-        Continente:<select name="continente" class="form-select form-select-sm">
-          <option value="0">Elige un continente</option>
-          <option value="Africa">África</option>
-          <option value="Americas">América</option>
-          <option value="Asia">Asia</option>
-          <option value="Europe">Europa</option>
-          <option value="Oceania">Oceania</option>
-        </select>
+    </header>
+    <nav class="text-center">
+      <button type="button" class="btn btn-primary">Datos Generales</button>
+      <button type="button" class="btn btn-primary">Datos Geográficos</button>
+      <button type="button" class="btn btn-primary">Traducciones</button>
+      <button type="button" class="btn btn-primary">Banderas</button>
+    </nav>
+    <div>
+      <div>
+        <div class="row">
+          <div class="col">
+            Continente:<select name="continente" class="form-select form-select-sm">
+              <option value="0">Elige un continente</option>
+              <option value="Africa">África</option>
+              <option value="Americas">América</option>
+              <option value="Asia">Asia</option>
+              <option value="Europe">Europa</option>
+              <option value="Oceania">Oceania</option>
+            </select>
+          </div>
+          <div class="col">
+            País:<select name="pais" class="form-select form-select-sm">
+              <option value="0">Elige un país</option>
+            </select>
+          </div>
+        </div>
       </div>
-      <div class="col">
-        País:<select name="pais" class="form-select form-select-sm">
-          <option value="0">Elige un país</option>
-        </select>
+    </div><br>
+    <div class="container text-center">
+      <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
+        data-bs-target="#capital">Capital</button>
+      <div id="capital" class="collapse">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil sapiente dignissimos sed temporibus veniam,
+        aperiam cum quibusdam ipsum dicta doloremque consectetur rem molestias ullam odio dolorum eaque! Ipsam, tempora!
+        Veniam!
+      </div>
+      <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
+        data-bs-target="#poblacion2">Población</button>
+      <div id="poblacion2" class="collapse">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas inventore placeat, perferendis asperiores
+        ducimus animi neque dolore magnam quod maxime magni sint! Officiis aliquid distinctio ullam odio dolor
+        consequuntur provident!
+      </div>
+      <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#area1">Área</button>
+      <div id="area1" class="collapse">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam nobis vitae, non voluptatibus explicabo incidunt
+        ipsa nemo eaque optio totam soluta fugiat libero facilis atque deserunt velit expedita suscipit at!
+      </div>
+      <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
+        data-bs-target="#dominio1">Dominio</button>
+      <div id="dominio1" class="collapse">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi cum nisi doloremque quos natus, quis voluptas
+        officia quas nihil maiores perspiciatis nemo consectetur nulla! Quibusdam sed cum veritatis nisi suscipit.
+      </div>
+      <button type="button" class="btn btn-secondary" data-bs-toggle="collapse"
+        data-bs-target="#moneda1">moneda</button>
+      <div id="moneda1" class="collapse">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda labore magnam mollitia facere quaerat odio
+        numquam eos reprehenderit libero veniam quia nesciunt vitae illum, blanditiis incidunt, ad accusantium unde at.
       </div>
     </div>
   </div>
-  
 </body>
 
 </html>
