--- a/index-richard.html
+++ b/index-richard.html
@@ -15,9 +15,9 @@
   <div class="container">
     <div>
       <header>
-        <div class="  mt-3">
+        <div class="mt-3">
         </div>
-        <div class=" ">
+        <div>
           <div class="row">
             <div class="col-8 p-4">
               <div class="row">
@@ -35,7 +35,7 @@
           </div>
       </header>
       <nav>
-        <div class="  mt-3">
+        <div class="mt-3">
           <ul class="nav nav-tabs nav-justified">
             <li class="nav-item">
               <a class="nav-link active" href="#">DATOS GENERALES</a>
@@ -76,7 +76,7 @@
       </div>
     </div>
     <br>
-    <div class="  row align-middle">
+    <div class="row align-middle">
       <div class="col-sm-6">
         <h2>Capital:</h2>
         <h2>Población:</h2>
