--- a/oscar.html
+++ b/oscar.html
@@ -65,7 +65,7 @@
                 <div class="card-header">
                     <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseOne">Frontera 1</a>
                 </div>
-                <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+                <div id="collapseOne" class="collapse hidden" data-bs-parent="#accordion">
                     <div class="card-body">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -77,7 +77,7 @@
                 <div class="card-header">
                     <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseTwo">Frontera 2</a>
                 </div>
-                <div id="collapseTwo" class="collapse show" data-bs-parent="#accordion">
+                <div id="collapseTwo" class="collapse hidden" data-bs-parent="#accordion">
                     <div class="card-body">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -89,7 +89,7 @@
                 <div class="card-header">
                     <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseThree">Frontera 3</a>
                 </div>
-                <div id="collapseThree" class="collapse show" data-bs-parent="#accordion">
+                <div id="collapseThree" class="collapse hidden" data-bs-parent="#accordion">
                     <div class="card-body">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                         ut
@@ -102,7 +102,7 @@
                 <div class="card-header">
                     <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFour">Frontera 4</a>
                 </div>
-                <div id="collapseFour" class="collapse show" data-bs-parent="#accordion">
+                <div id="collapseFour" class="collapse hidden" data-bs-parent="#accordion">
                     <div class="card-body">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut
@@ -117,7 +117,7 @@
                     <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFive">Frontera
                         5</a>
                 </div>
-                <div id="collapseFive" class="collapse show" data-bs-parent="#accordion">
+                <div id="collapseFive" class="collapse hidden" data-bs-parent="#accordion">
                     <div class="card-body">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut
