--- a/eduardo.html
+++ b/eduardo.html
@@ -65,14 +65,14 @@
             </div>
 
         </div>
-        <div class="container mt-3">
+        <div class="container text-center">
 
             <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo1">idioma2
             </button>
             <div id="demo1" class="collapse">
                 ESTOS SON LOS IDIOMAS
            </div>
-             <div class="container mt-3">
+             <div class="container text-center">
         
               <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo2">idioma3
              </button>
@@ -80,14 +80,14 @@
                     ESTOS SON LOS IDIOMAS
             </div>
 
-        <div class="container mt-3">
+        <div class="container text-center">
           <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo3">idioma4
             </button>
             <div id="demo3" class="collapse">
                 ESTOS SON LOS IDIOMAS
             </div>
         </div>
-        <div class="container mt-3">
+        <div class="container text-center">
    
          <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo4">idioma5
         </button>
