--- a/paisesdelmundo.html
+++ b/paisesdelmundo.html
@@ -161,23 +161,23 @@
         </div><br>
         <div class="container text-center">
 
-            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo0">idioma1
+            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo0">idioma1
             </button>
             <div id="demo0" class="collapse">
                 ESTOS SON LOS IDIOMAS
             </div>
         
-            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo1">idioma2
+            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo1">idioma2
             </button>
             <div id="demo1" class="collapse">
                 ESTOS SON LOS IDIOMAS
             </div>
-            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo2">idioma3
+            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo2">idioma3
             </button>
             <div id="demo2" class="collapse">
                 ESTOS SON LOS IDIOMAS
             </div>
-            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo3">idioma4
+            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo3">idioma4
             </button>
             <div id="demo3" class="collapse">
                 ESTOS SON LOS IDIOMAS
@@ -185,7 +185,7 @@
 
 
 
-            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo4">idioma5
+            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo4">idioma5
             </button>
             <div id="demo4" class="collapse">
                 ESTOS SON LOS IDIOMAS
