--- a/index-richard.html
+++ b/index-richard.html
@@ -83,6 +83,7 @@
       <br>
       <div class="col-sm-6">
         <h2>Dominio:</h2>
+        <h2>Moneda:</h2>
         <ul class="list-group">
           <li class="list-group-item">
             Nombre:
