--- a/paisesdelmundo.html
+++ b/paisesdelmundo.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
         </div><br>
-        <div class="container text-center">
+        <div class="conteiner mt-3">
 
             <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo0">idioma1
             </button>
@@ -167,10 +167,10 @@
                 ESTOS SON LOS IDIOMAS
             </div>
         
-            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo1">idioma2
+            <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo1">秘鲁共和国
             </button>
             <div id="demo1" class="collapse">
-                ESTOS SON LOS IDIOMAS
+                CHINA, KOREA
             </div>
             <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo2">idioma3
             </button>
