--- a/eduardo.html
+++ b/eduardo.html
@@ -56,7 +56,7 @@
             </form>
 
         </div>
-        <div class="container mt-3">
+        <div class="conteiner mt-3">
 
             <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo0">idioma1
             </button>
@@ -65,14 +65,14 @@
             </div>
 
         </div>
-        <div class="container text-center">
+        <div class="conteiner mt-3">
 
             <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo1">idioma2
             </button>
             <div id="demo1" class="collapse">
                 ESTOS SON LOS IDIOMAS
            </div>
-             <div class="container text-center">
+             <div class="conteiner mt-3">
         
               <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo2">idioma3
              </button>
@@ -80,14 +80,14 @@
                     ESTOS SON LOS IDIOMAS
             </div>
 
-        <div class="container text-center">
+        <div class="conteiner mt-3">
           <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo3">idioma4
             </button>
             <div id="demo3" class="collapse">
                 ESTOS SON LOS IDIOMAS
             </div>
         </div>
-        <div class="container text-center">
+        <div class="conteiner mt-3">
    
          <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo4">idioma5
         </button>
