--- a/indexdani.html
+++ b/indexdani.html
@@ -16,9 +16,9 @@
   <div class="container">
     <header>
       <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
-        align="left" width="227" height="152">
+        align="left" width="227" height="156">
       <img src="https://image.shutterstock.com/image-vector/cartoon-planet-earth-on-white-260nw-2140149873.jpg"
-        align="right" width="227" height="152">
+        align="right" width="227" height="156">
       <div class="container-fluid p-5 bg-success text-white text-center ">
 
         <h1>PAISES DEL MUNDO</h1>
@@ -77,7 +77,7 @@
         </tr>
         <tr>
           <td>
-            <h3>Población: 99999999999</h3>
+            <h3>Área: 99999999999</h3>
           </td>
           <td></td>
         </tr>
