--- a/oscar.html
+++ b/oscar.html
@@ -18,16 +18,16 @@
                 <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
                         class="rounded-circle"></div>
                 <div class="col-sm-10">
-                    <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
+                    <h1 class="text-white text-center bg-secondary p-4">PAISES DEL MUNDO</h1>
                 </div>
             </div>
         </header>
         <div>
             <nav class="text-center">
-                <button type="button" class="btn btn-primary">Datos Generales</button>
-                <button type="button" class="btn btn-primary">Datos Geográficos</button>
-                <button type="button" class="btn btn-primary">Traducciones</button>
-                <button type="button" class="btn btn-primary">Banderas</button>
+                <button type="button" class="btn btn-secondary">Datos Generales</button>
+                <button type="button" class="btn btn-secondary">Datos Geográficos</button>
+                <button type="button" class="btn btn-secondary">Traducciones</button>
+                <button type="button" class="btn btn-secondary">Banderas</button>
             </nav>
         </div>
         <div class="tab-content">
@@ -52,81 +52,18 @@
                     </div>
                 </form>
             </div>
-            <div id="datos geograficos" class="container tab-pane fade">
-
-            </div>
             <div id="traduccion" class="container tab-pane fade"><br>
             </div>
             <div id="banderas" class="container tab-pane fade"><br>
+            </div><br>
+            <div class="container text-center">
+                <h3 class="frontera1">Frontera 1</h3>
+                <h3 class="frontera2">Frontera 2</h3>
+                <h3 class="frontera3">Frontera 3</h3>
+                <h3 class="frontera4">Frontera 4</h3>
+                <h3 class="frontera5">Frontera 5</h3>
             </div>
-        </div><br>
-        <div id="accordion">
-            <div class="card">
-                <div class="card-header">
-                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseOne">Frontera 1</a>
-                </div>
-                <div id="collapseOne" class="collapse hidden" data-bs-parent="#accordion">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseTwo">Frontera 2</a>
-                </div>
-                <div id="collapseTwo" class="collapse hidden" data-bs-parent="#accordion">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseThree">Frontera 3</a>
-                </div>
-                <div id="collapseThree" class="collapse hidden" data-bs-parent="#accordion">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                        ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFour">Frontera 4</a>
-                </div>
-                <div id="collapseFour" class="collapse hidden" data-bs-parent="#accordion">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                        incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header">
-                    <a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseFive">Frontera
-                        5</a>
-                </div>
-                <div id="collapseFive" class="collapse hidden" data-bs-parent="#accordion">
-                    <div class="card-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                        incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
 </body>
