--- a/traduccion.html
+++ b/traduccion.html
@@ -98,29 +98,58 @@
     </header>
     </div>
     <!-- FIN DE LA CEBECERA!!!!!!!!!!!!!! -->
-    <div class="container mt-3">
-        <h2>Idiomas</h2>
-        <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo">Idioma1 </button>
-        <div id="demo" class="collapse">
-            Paises del idioma1 xxxxxxxxxxxxxxxxxxxxx
+
+    <h2>Idiomas</h2>
+    <div class="row">
+        <div>
+            <div class="container mt-3">
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse"
+                    data-bs-target="#demo1">paises1</button>
+                <div id="demo1" class="collapse">
+                    este es el pais1 xxxxxxxxx
+                </div>
+            </div>
         </div>
-        <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo">Idioma 2</button>
-        <div id="demo" class="collapse">
-            Paises del idioma2 xxxxxxxxxxxxxxxxxxxxx
+        <div>
+            <div class="container mt-3">
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse"
+                    data-bs-target="#demo2">paises2</button>
+                <div id="demo2" class="collapse">
+                    este es el pais1 xxxxxxxxx
+                </div>
+            </div>
         </div>
-        <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo">Idioma 3</button>
-        <div id="demo" class="collapse">
-            Paises del idioma3 xxxxxxxxxxxxxxxxxxxxx
+        <div>
+            <div class="container mt-3">
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse"
+                    data-bs-target="#demo3">paises3</button>
+                <div id="demo3" class="collapse">
+                    este es el pais1 xxxxxxxxx
+                </div>
+            </div>
         </div>
-        <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo">Idioma 4</button>
-        <div id="demo" class="collapse">
-            Paises del idioma4 xxxxxxxxxxxxxxxxxxxxx
+        <div>
+            <div class="container mt-3">
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse"
+                    data-bs-target="#demo4">paises4</button>
+                <div id="demo4" class="collapse">
+                    este es el pais1 xxxxxxxxx
+                </div>
+            </div>
         </div>
-        <button type="button" class="btn btn-info" data-bs-toggle="collapse" data-bs-target="#demo">Idioma 5</button>
-        <div id="demo" class="collapse">
-            Paises del idioma5 xxxxxxxxxxxxxxxxxxxxx
+        <div>
+            <div class="container mt-3">
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse"
+                    data-bs-target="#demo5">paises5</button>
+                <div id="demo5" class="collapse">
+                    este es el pais1 xxxxxxxxx
+                </div>
+            </div>
         </div>
     </div>
+
+
+
     <!-- INICIO DEL FOOTER!!!!!!!!!!!!!! -->
     <footer
         class="container-fluid bg-secondary bg-gradient text-center text-white text-lg-start position-fixed bottom-0">
@@ -134,6 +163,7 @@
                 href="https://github.com/jdiazbasgit/becaonce2ed">github.com/jdiazbasgit/becaonce2ed</a></label>
         </div>
     </footer>
+
 </body>
 
 
