cambio de letra

--- a/index copy-fronteras.html
+++ b/index copy-fronteras.html
@@ -67,15 +67,14 @@
           <option value="3">Three</option>
         </select>
       </div>
-       <div>
+       <div style="text-align:center;" >
       <ul >
-        <li> elemento</li>
-        <li> elemento</li>
-        <li> elemento</li>
-        <li> elemento</li>
-        <li> elemento</li>
-        <li> elemento</li>
-        
+        <h6>frontera</h6>
+        <h6>frontera</h6>
+        <h6>frontera</h6>
+        <h6>frontera</h6>
+        <h6>frontera</h6>
+        <h6>frontera</h6>
         
       </ul>
     </div>
