--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" ></script>
     
-    <link rel="styleshett" hreff="css/estilo.css">
+    <link rel="styleshett" href="css/estilo.css">
 </head>
 
 <body>
